--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://timothywilkins.github.io/react-task-app",
+  "homepage": "https://timothywilkins.github.io/react-task-app",
   "name": "react-task-app",
   "version": "0.1.0",
   "private": true,
